Added new Color Picker

--- a/packages/main/public/lang/en.json
+++ b/packages/main/public/lang/en.json
@@ -6,6 +6,12 @@
     "view.config.theme": "Theme",
     "view.config.language": "Language",
     "view.config.apply": "Apply",
+    "color.primary": "Primary",
+    "color.secondary": "Secondary",
+    "color.hue": "Hue",
+    "color.shade": "Shade",
+    "preview.title": "Title",
+    "preview.item": "Item",
     "theme.silver": "Silver",
     "theme.lavender": "Lavender",
     "theme.turquoise": "Turquoise",
