--- a/packages/main/public/lang/es.json
+++ b/packages/main/public/lang/es.json
@@ -6,6 +6,12 @@
     "view.config.theme": "Tema",
     "view.config.language": "Idioma",
     "view.config.apply": "Aplicar",
+    "color.primary": "Primario",
+    "color.secondary": "Secundario",
+    "color.hue": "Tono",
+    "color.shade": "Sombra",
+    "preview.title": "Título",
+    "preview.item": "Ítem",
     "theme.silver": "Plateado",
     "theme.lavender": "Lavanda",
     "theme.turquoise": "Turquesa",
