Added more internationalization messages

--- a/packages/main/public/lang/en.json
+++ b/packages/main/public/lang/en.json
@@ -11,8 +11,13 @@
     "preview.theme.dark": "Dark Theme",
     "color.hue": "Hue",
     "color.shade": "Shade",
+    "color.viewer.fg": "Text",
+    "color.viewer.bg": "Color",
+    "color.viewer.normal": "Normal",
+    "color.viewer.light": "Light",
+    "color.viewer.dark": "Dark",
     "preview.title": "Title",
-    "preview.item": "Item",
+    "preview.item": "Item",    
     "theme.silver": "Silver",
     "theme.lavender": "Lavender",
     "theme.turquoise": "Turquoise",
