--- a/packages/main/public/lang/es.json
+++ b/packages/main/public/lang/es.json
@@ -1,7 +1,7 @@
 {
     "navbar.palette.title": "Paleta",
     "navbar.config.title": "Config",
-    "navbar.about.title": "Acerca de",
+    "navbar.about.title": "Info",
     "view.config.theme": "Tema",
     "view.config.language": "Idioma",
     "view.config.apply": "Aplicar",
@@ -11,6 +11,11 @@
     "preview.theme.dark": "Tema oscuro",
     "color.hue": "Tono",
     "color.shade": "Sombra",
+    "color.viewer.fg": "Texto",
+    "color.viewer.bg": "Color",
+    "color.viewer.normal": "Normal",
+    "color.viewer.light": "Claro",
+    "color.viewer.dark": "Oscuro",
     "preview.title": "Título",
     "preview.item": "Ítem",
     "theme.silver": "Plateado",
